manifests/firefly-iii/importer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefly-iii-importer
  labels:
    app: firefly-iii-importer
spec:
  clusterIP: None
  ports:
    - port: 80
      name: http
      targetPort: http
  selector:
    app: firefly-iii-importer
    tier: frontend
