manifests/firefly-iii/importer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.org/client-max-body-size: "0"
    nginx.org/proxy-buffer-size: "8k"
  labels:
  name: firefly-iii-importer-ingress
spec:
  rules:
  - host: importer-firefly-iii.your-domain.org
    http:
      paths:
      - backend:
          service:
            name: firefly-iii-importer
            port:
              name: http
        path: /
        pathType: Prefix
